--- a/css/bike.css
+++ b/css/bike.css
@@ -24,7 +24,7 @@ h1 {
 
 figure {
   display: inline-block;
-  border: 10px solid white;
+  border: 10px solid blue;
 }
 
 ul {
@@ -40,11 +40,10 @@ li {
   float: left;
   width: 8px;
   height: 8px;
-  background: lightgray;
 }
 
 .player {
-  background: blue;
+  background: cyan;
 }
 
 .computer {
