--- a/css/bike.css
+++ b/css/bike.css
@@ -29,6 +29,10 @@ body {
 
 figure {
   display: inline-block;
+  min-width: 800px;
+  min-height: 560px;
+  max-width: 820px;
+  max-height: 580px;
   border: 10px solid #5EC4F2;
 }
 
@@ -57,4 +61,27 @@ li {
 
 h1 {
   color: white;
+  font-family: 'Audiowide', cursive;
+  /*font-family: 'Orbitron', sans-serif;*/
+  font-size: 30px;
+}
+
+.intro-outro {
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  z-index: 2;
+  left: 0;
+  right: 0;
+  top: 360px;
+}
+
+#start, #replay {
+  border: 4px solid red;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  cursor: pointer;
 }
