--- a/css/bike.css
+++ b/css/bike.css
@@ -67,10 +67,10 @@ h1 {
   z-index: 2;
   left: 0;
   right: 0;
-  top: 290px;
+  top: 220px;
 }
 
-#start, #replay {
+#start, #replay, #two-player {
   border: 4px solid red;
   border-radius: 10px;
   padding-top: 5px;
@@ -79,9 +79,10 @@ h1 {
   padding-right: 30px;
   cursor: pointer;
   background-color: black;
+  margin-bottom: 8px;
 }
 
-#computer-win, #player1-win {
+#computer-win, #you-win, #player1-win, #player2-win {
   padding-bottom: 30px;
   font-size: 40px;
 }
@@ -96,5 +97,5 @@ h1 {
 h1#instructions {
   text-decoration: underline;
   padding-bottom: 10px;
-  font-size: 32px;
+  font-size: 30px;
 }
