--- a/css/bike.css
+++ b/css/bike.css
@@ -70,6 +70,10 @@ h1 {
   top: 220px;
 }
 
+.end-display {
+  padding-top: 100px;
+}
+
 #start, #replay, #two-player {
   border: 4px solid red;
   border-radius: 10px;
