--- a/css/bike.css
+++ b/css/bike.css
@@ -68,6 +68,8 @@ h1 {
   left: 0;
   right: 0;
   top: 220px;
+  width: 800px;
+  margin: auto;
 }
 
 .end-display {
@@ -102,4 +104,43 @@ h1#instructions {
   text-decoration: underline;
   padding-bottom: 10px;
   font-size: 30px;
+}
+
+.display {
+  display: flex;
+  justify-content: center;
+}
+
+.difficulty {
+  position: relative;
+  width: 200px;
+}
+
+.rightspace {
+  width: 200px;
+}
+
+.medium, .hard {
+  border: 4px solid red;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  cursor: pointer;
+  background-color: black;
+  margin-bottom: 8px;
+}
+
+.easy {
+  color: red;
+  border: 4px solid red;
+  border-radius: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+  cursor: pointer;
+  background-color: black;
+  margin-bottom: 8px;
 }
